# frag-sim

./: Cargo.toml  README.md  test.txt
src/: main.rs
src/config_menu/: config_menu.rs  mod.rs
src/physics/: floor.rs  fragment.rs  grenade.rs  mod.rs  sim_settings.rs  sim_setup.rs
