[package]
name = "frag-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.7"
bevy_rapier3d = "0.14.1"
bevy_flycam = "0.7.0"
ultraviolet = { version = "0.6", features = [ "f64" ] }
plotters = "0.3.1"